Added sklearn notebooks

--- a/ml_with_goog_pred.ipynb
+++ b/ml_with_goog_pred.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:49c0b88bd5628d68288feaf90e7072afa1069766bd563de9e94ec4b396045621"
+  "signature": "sha256:d3a935dc2f8f6f8552ec3664f59e69f04d4953c77f8a9238f7a7f209c11627d6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2118,7 +2118,25 @@
      },
      "source": [
       "Benchmarking Google Prediction API Performance\n",
-      "================="
+      "=================\n",
+      "\n",
+      "Prediction accuracies for `sklearn.RandomForestClassifier` (100 trees) and Goole Prediction API\n",
+      "on the Taylor Swift audio clip data set.\n",
+      "\n",
+      "### Input Features: Raw Time Samples ###\n",
+      "\n",
+      "* Random Forest: 78.9%\n",
+      "* Google Prediciton API: 72.7%\n",
+      "\n",
+      "### Input Features: Frequency Spectra ###\n",
+      "\n",
+      "* Random Forest: 98.3%\n",
+      "* Google Prediciton API: 95.1%\n",
+      "\n",
+      "### Input Features: Averaged Freqency Spectra ###\n",
+      "\n",
+      "* Random Forest: 99.2%\n",
+      "* Google Prediciton API: 94.3%\n"
      ]
     },
     {
